# lz-compression

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
benchmark/: benchmark.cpp  benchmark.h  dict_size.cpp  incremental.cpp  input_provider.cpp  input_provider.h  main.cpp  prefix.h  time.cpp
benchmark/plot/: codewords_aaa.gp  codewords_img.gp  codewords_odyssey.gp  dict_size_img_ratio.gp  dict_size_img_time.gp  dict_size_odyssey_ratio.gp  dict_size_odyssey_time.gp  ratio_aaa.gp  ratio_img.gp  ratio_odyssey.gp  time2_img.gp  time2_odyssey.gp  time_img.gp  time_odyssey.gp
src/: bit_buffer.cpp  bit_buffer.hpp  buffer.cpp  buffer.h  buffer.hpp  codeword.hpp  dict.h  dict_base.h  dict_base.hpp  dictionary_node.hpp  encode.cpp  encode_dict_node.h  encode_dict_node.hpp  encode_dict_tree.cpp  encode_dict_tree.h  huffman.cpp  huffman.h  label_tree_node.h  lz.h  lz.hpp  lz78.h  lz78.hpp  lz_base.h  lzw.h  mra_dict.h  mru_decode_dict.hpp  mru_dict.cpp  mru_dict.hpp  mru_encode_dict.cpp  mru_encode_dict.hpp  mru_pool.cpp  mru_pool.hpp  pool_dict.h  pool_dict_tree.cpp  pool_dict_tree.h  prefix.h  prefix.hpp  smru_dict.cpp  smru_dict.h  smru_dict.hpp  (+7 more)
test/: bit_buffer.cpp  buffer.cpp  dictionary_node.cpp  encode_dict_node.cpp  encode_dict_tree.cpp  encoding_decoding.cpp  huffman.cpp  lz78.cpp  lzw.cpp  main.cpp  mra_dict.cpp  mru_dict.cpp  mru_pool.cpp  pool_dict_tree.cpp  prefix.h  prefix.hpp  smru_dict.cpp  trie_dictionary.cpp  trie_encode_dict.cpp  word_tree_node.cpp
